# STT-FineTuning

./: README.md  hf_manager.py  main.py  pyproject.toml  scratch_test.py
configs/: config.yaml  config_test.yaml
evaluation/: evaluate.py
evaluation/results/: librispeech_clean_test_wer_cer.csv  librispeech_clean_test_wer_cer_summary.json  librispeech_other_test_base_wer_cer.csv  librispeech_other_test_base_wer_cer_summary.json
inference/: demo.py  inference.py  streaming_demo.py
runpod_loadbalanced/: Dockerfile  app.py  client_example.py  requirements.txt  test_request.py
scripts/: download_dataset.py  merge_adapter.py  run_test.sh  run_training.sh  train.py
src/: collator.py  dataset.py  metrics.py  model.py  trainer.py  utils.py
stt_finetuning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
